06-Sep-2011 Adding a test to determine if duplicate package definition schemas are present. This can happen when both Debug and Release builds are present.

06-Sep-2011 WindowsSDK-6.0 package now also checks in the VisualC install path for a 'PlatformSDK' directory, if it cannot find WindowsSDK in the registry.

06-Sep-2011 Opus.Core.RelativePathUtilities.GetPath now unescapes all relative paths. This seems to be necessary for VisualStudio projects with the build root on the same drive as VisualStudio.

06-Sep-2011 Adding -D=<defines> and -U=<undefines> to the command line actions to add per-run definitions and undefinitions to the package compilation step. Undefines are applied after all defines have been accumulated.

05-Sep-2011 Adding AMDAPPSDK-2.5 to the packages root, and OpenCLTest1-dev to the testpackages root. These are Windows only currently.

05-Sep-2011 Opus.Core.Target constructors are now private. Instances can now be requested through Target static factory methods. This allows unique Targets to be created, and used as keys to collection indexing.

04-Sep-2011 Changing -createdebugproject to generate a .csproj targetted to Framework 3.5 so that MonoDevelop can compile it.

04-Sep-2011 Fixing directory structure to the CodeGenTest2-dev test package.

02-Sep-2011 Removed the '-changedependency' option as it is also available through '-dependent=<package> -changeversion=<version>'

02-Sep-2011 Updated many actions to take a semi-colon separated list of arguments. In real use cases, it was becoming time consuming to repeat calls to do the same thing with different arguments, e.g. remove platform filters.

01-Sep-2011 Removed legacy ArgumentProcessor interface and attribute. Replaced all existing uses of this (command switches in plugin packages) with Opus.Core.IAction classes.
