@@ -1,0 +1,4 @@
+#!/bin/bash
+
+exec mono $OPUSPATH/Opus.exe $@
+
